--- a/Hoodwink.html
+++ b/Hoodwink.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="cs">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -56,7 +56,7 @@
       <!-- Vlevo: popis -->
       <div class="hero-description">
         <div class="attr-name">
-          <p>AGILITY <img src="Images/Atributes/hero_agility.png"></p>
+          <p>AGILITY <img src="Images/Atributes/hero_agility.png" alt="hero_agility"></p>
         </div>
         <br>
         <h2><Label>HOODWINK</Label></h2>
@@ -66,7 +66,7 @@
         </p>
         <br>
         <h3>ATTACK TYPE</h3><br>
-        <p>RANGED</p> <img src="Images/Stats/icon_projectile_speed.png">
+        <p>RANGED</p> <img src="Images/Stats/icon_projectile_speed.png" alt="icon_projectile_speed">
         <br>
       </div>
 
@@ -261,7 +261,7 @@
       <h3>FACET DETAILS</h3>
       <div class="facet-box">
         <div class="facet-box-GoNuts">
-          <img src="Images/Hoodwink/range.png">
+          <img src="Images/Hoodwink/range.png" alt="range">
           <h4>GO NUTS</h4>
         </div>
         <p>
@@ -282,7 +282,7 @@
       </div>
       <div class="facet-box">
         <div class="facet-box-Hipshot">
-          <img src="Images/Hoodwink/cooldown.png">
+          <img src="Images/Hoodwink/cooldown.png" alt="cooldown">
           <h4>HIPSHOT</h4>
         </div>
         <p>
@@ -313,7 +313,6 @@
         <span class="voice-text">Caught ya in your stubbies did we ?</span>
       </div>
 
-      <!-- Další hláška -->
       <div class="voice-line" data-audio="Voices/Hoodwink/Worry.mpeg">
         <img src="Images/Hoodwink/Hoodwink_minimap_icon.webp" alt="Hero Head" class="hero-head-icon">
         <button class="voice-button">
