--- a/Weaver.html
+++ b/Weaver.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="cs">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -56,7 +56,7 @@
       <!-- Vlevo: popis -->
       <div class="hero-description">
         <div class="attr-name">
-          <p>AGILITY <img src="Images/Atributes/hero_agility.png"></p>
+          <p>AGILITY <img src="Images/Atributes/hero_agility.png" alt="hero_agility"></p>
         </div>
         <br>
         <h2><Label>WEAVER</Label></h2>
@@ -66,7 +66,7 @@
         </p>
         <br>
         <h3>ATTACK TYPE</h3><br>
-        <p>RANGED</p> <img src="Images/Stats/icon_projectile_speed.png">
+        <p>RANGED</p> <img src="Images/Stats/icon_projectile_speed.png" alt="icon_projectile_speed">
         <br>
       </div>
 
@@ -260,7 +260,7 @@
       <h3>FACET DETAILS</h3>
       <div class="facet-box">
         <div class="facet-box-Skitter">
-          <img src="Images/Weaver/speed.png">
+          <img src="Images/Weaver/speed.png" alt="speed">
           <h4>SKITTERSTEP</h4>
         </div>
         <p>
@@ -280,7 +280,7 @@
       </div>
       <div class="facet-box">
         <div class="facet-box-Hivemind">
-          <img src="Images/Weaver/xp.png">
+          <img src="Images/Weaver/xp.png" alt="xp">
           <h4>HIVEMIND</h4>
         </div>
         <p>
