--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="cs">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -57,12 +57,21 @@
 
     <!-- Carousel / Image Slider -->
     <section class="carousel">
-      <h2>Carousel / Image Slider</h2>
-      <div class="swiffy-slider">
-        <ul class="slider-container">
-          <li><img src="QImages/Dota1.jpg" style="max-width: 100%;height: auto;"></li>
-          <li><img src="QImages/Dota2.jpg" style="max-width: 100%;height: auto;"></li>
-          <li><img src="QImages/Dota1.jpg" style="max-width: 100%;height: auto;"></li>
+      <h2>“A Modern Multiplayer Masterpiece.”</h2>
+      <div class="swiffy-slider slider-nav-autoplay" data-slider-nav-autoplay-interval="2500">
+        <ul class="slider-container" >
+          <li><img src="Images/Dota1.jpg" alt="Dota1"></li>
+          <li><img src="Images/Dota2.jpg" alt="Dota2"></li>
+          <li><img src="Images/Background/559503.jpg" alt="Background559503"></li>
+          <li><img src="Images/Background/585068.jpg" alt="Background585068"></li>
+          <li><img src="Images/Background/488286.jpg" alt="Background488286"></li>
+          <li><img src="Images/Background/387247041.jpg" alt="Background387247041"></li>
+          <li><img src="Images/Background/dota2hq.eu-weaver-desktop-wallpaper-the-dusk-crawler-3500-1920x1080.jpg" alt="eu-weaver-desktop-wallpaper-the-dusk-crawler-3500-1920x1080"></li>
+          <li><img src="Images/Background/dotawallpapers.com-legion-commander-arcana-wallpaper-for-desktop-4471-1968x1536.jpg" alt="com-legion-commander-arcana-wallpaper-for-desktop-4471-1968x1536"></li>
+          <li><img src="Images/Background/dotawallpapers.com-dota-2-hoodwink-4145-1920x1085.jpg" alt="com-dota-2-hoodwink-4145-1920x1085"></li>
+          <li><img src="Images/Background/614585827.jpg" alt="Background614585827"></li>
+          <li><img src="Images/Background/dotawallpapers.com-dota-wallpaper-4330-2560x1440.gif" alt="com-dota-wallpaper-4330-2560x1440"></li>
+          <li><img src="Images/Background/519205575.jpg" alt="Background519205575"></li>
         </ul>
 
         <button type="button" class="slider-nav"></button>
