--- a/patch_7.38.html
+++ b/patch_7.38.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="cs">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -46,7 +46,7 @@
 
     <!-- Patch Title -->
     <section class="patch-title">
-      <h1>Gameplay Update <span class="patch-number">7.38</span></h1>
+      <h2>Gameplay Update <span class="patch-number">7.38</span></h2>
       <p>WAYS OF THE WATER</p>
     </section>
 
