--- a/LegionCommander.html
+++ b/LegionCommander.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="cs">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -56,7 +56,7 @@
       <!-- Vlevo: popis -->
       <div class="hero-description">
         <div class="attr-name">
-          <p>STRENGTH <img src="Images/Atributes/hero_strength.png"></p>
+          <p>STRENGTH <img src="Images/Atributes/hero_strength.png" alt="hero_strength"></p>
         </div>
         <br>
         <h2><Label>LEGION <BR>COMMANDER</Label></h2>
@@ -67,7 +67,7 @@
         </p>
         <br>
         <h3>ATTACK TYPE</h3><br>
-        <p>MELLE</p> <img src="Images/Stats/icon_damage.png">
+        <p>MELLE</p> <img src="Images/Stats/icon_damage.png" alt="icon_damage">
         <br>
       </div>
 
@@ -267,7 +267,7 @@
       <h3>FACET DETAILS</h3>
       <div class="facet-box">
         <div class="facet-box-StonehallPlate">
-          <img src="Images/Stats/icon_armor.png">
+          <img src="Images/Stats/icon_armor.png" alt="icon_armor">
           <h4>STONEHALL PLATE</h4>
         </div>
         <p>
@@ -287,7 +287,7 @@
       </div>
       <div class="facet-box">
         <div class="facet-box-SpoilsOfWar">
-          <img src="Images/Stats/icon_damage.png">
+          <img src="Images/Stats/icon_damage.png" alt="icon_damage">
           <h4>SPOILS OF WAR</h4>
         </div>
         <p>
