--- a/Wisp.html
+++ b/Wisp.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="cs">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -56,7 +56,7 @@
       <!-- Vlevo: popis -->
       <div class="hero-description">
         <div class="attr-name">
-          <p>UNIVERSAL <img src="Images/Atributes/hero_universal.png"></p>
+          <p>UNIVERSAL <img src="Images/Atributes/hero_universal.png" alt="hero_universal"></p>
         </div>
         <br>
         <h2><Label>IO</Label></h2>
@@ -66,7 +66,7 @@
         </p>
         <br>
         <h3>ATTACK TYPE</h3><br>
-        <p>RANGED</p> <img src="Images/Stats/icon_projectile_speed.png">
+        <p>RANGED</p> <img src="Images/Stats/icon_projectile_speed.png" alt="icon_projectile_speed">
         <br>
       </div>
 
@@ -200,7 +200,7 @@
           </div>
           <div class="role-item">
             <span class="role-label">Nuker</span>
-            <div class="role-bar"><span style="width: 25"></span></div>
+            <div class="role-bar"><span style="width: 25%"></span></div>
           </div>
           <div class="role-item">
             <span class="role-label">Disabler</span>
@@ -262,7 +262,7 @@
       <h3>FACET DETAILS</h3>
       <div class="facet-box">
         <div class="facet-box-Kritzkrieg">
-          <img src="Images/Wisp/damage.png">
+          <img src="Images/Wisp/damage.png" alt="damage">
           <h4>KRITZKRIEG</h4>
         </div>
         <p>
@@ -282,7 +282,7 @@
       </div>
       <div class="facet-box">
         <div class="facet-box-Medigun">
-          <img src="Images/Wisp/armor.png">
+          <img src="Images/Wisp/armor.png" alt="armor">
           <h4>MEDIGUN</h4>
         </div>
         <p>
