--- a/LegionCommander.html
+++ b/LegionCommander.html
@@ -21,7 +21,7 @@
           <li><a href="patch_7.38.html">Patch 7.38</a></li>
         </ul>
       </div>
-      <!-- HOME (odkaz rovnou) -->
+      <!-- HOME -->
       <div class="home-link">
         <a href="index.html">HOME</a>
       </div>
@@ -43,17 +43,9 @@
     </div>
   </header>
 
-  <!-- Toggle pro light/dark v pravém rohu -->
-  <div class="theme-toggle-wrapper">
-    <label for="themeSwitch">Dark/Light:</label>
-    <input type="checkbox" id="themeSwitch">
-  </div>
-
   <main class="hero-layout">
 
-    <!-- Horní řádek: vlevo popis, uprostřed video, vpravo schopnosti -->
     <section class="hero-top">
-      <!-- Vlevo: popis -->
       <div class="hero-description">
         <div class="attr-name">
           <p>STRENGTH <img src="Images/Atributes/hero_strength.png" alt="hero_strength"></p>
@@ -71,7 +63,6 @@
         <br>
       </div>
 
-      <!-- Uprostřed: showcase (video) vystředěný -->
       <div class="hero-showcase">
         <h3>LEGION COMMANDER</h3>
         <br>
@@ -80,12 +71,10 @@
         </video>
       </div>
 
-      <!-- Vpravo: schopnosti ve sloupci s tooltipem -->
       <div class="hero-abilities-extended">
         <h3>ABILITIES</h3>
         <div class="abilities-column">
 
-          <!-- Jedna schopnost (ikona s tooltipem, název vedle) -->
           <div class="ability-item">
             <div class="icon-wrapper tooltip">
               <img src="Images/LegionCommander/innate_icon.png" alt="Innate Ability">
@@ -153,13 +142,12 @@
             <span>Duel</span>
           </div>
 
-        </div> <!-- .abilities-column -->
-      </div> <!-- .hero-abilities-extended -->
+        </div>
+      </div> 
     </section>
 
-    <!-- Druhý řádek: Atributy, Role, Statistiky -->
+    <!-- Atributy -->
     <section class="hero-info-row">
-      <!-- Atributy -->
       <div class="hero-attributes">
         <div class="portrait-section">
           <img src="images/LegionCommander/Legion_Commander_icon.webp" alt="Hero Portrait" class="hero-portrait">
@@ -262,7 +250,7 @@
       </div>
     </section>
 
-    <!-- Třetí řádek: Facety -->
+    <!-- Facety -->
     <section class="hero-facets-extended fade-up" id="facets">
       <h3>FACET DETAILS</h3>
       <div class="facet-box">
@@ -308,22 +296,19 @@
       </div>
     </section>
 
-    <!-- Hlášky hrdiny -->
+    <!-- Hlášky -->
     <section class="hero-voice-lines" id="voiceLines">
       <h3>LEGION COMMANDER VOICELINES</h3>
 
-      <!-- Jedna hláška (Legion Commander) -->
       <div class="voice-line" data-audio="Voices\LegionCommander\i_will_crush_you_underfoot.mp3">
         <img src="Images/LegionCommander/Legion_Commander_minimap_icon.webp" alt="Hero Head" class="hero-head-icon">
         <button class="voice-button">
-          <!-- Ikonky pro play/pause -->
           <span class="play-icon">&#9658;</span>
           <span class="pause-icon" style="display:none;">&#10073;&#10073;</span>
         </button>
         <span class="voice-text">I will crush you underfoot!</span>
       </div>
 
-      <!-- Další hláška -->
       <div class="voice-line" data-audio="Voices/LegionCommander/The_rush_of_battle.mp3">
         <img src="Images/LegionCommander/Legion_Commander_minimap_icon.webp" alt="Hero Head" class="hero-head-icon">
         <button class="voice-button">
@@ -333,8 +318,6 @@
         <span class="voice-text">Ah! The rush of battle!</span>
       </div>
     </section>
-
-
   </main>
 
   <footer>
