--- a/Hoodwink.html
+++ b/Hoodwink.html
@@ -21,7 +21,7 @@
           <li><a href="patch_7.38.html">Patch 7.38</a></li>
         </ul>
       </div>
-      <!-- HOME (odkaz rovnou) -->
+      <!-- HOME -->
       <div class="home-link">
         <a href="index.html">HOME</a>
       </div>
@@ -43,17 +43,9 @@
     </div>
   </header>
 
-  <!-- Toggle pro light/dark v pravém rohu -->
-  <div class="theme-toggle-wrapper">
-    <label for="themeSwitch">Dark/Light:</label>
-    <input type="checkbox" id="themeSwitch">
-  </div>
-
   <main class="hero-layout">
 
-    <!-- Horní řádek: vlevo popis, uprostřed video, vpravo schopnosti -->
     <section class="hero-top">
-      <!-- Vlevo: popis -->
       <div class="hero-description">
         <div class="attr-name">
           <p>AGILITY <img src="Images/Atributes/hero_agility.png" alt="hero_agility"></p>
@@ -70,7 +62,6 @@
         <br>
       </div>
 
-      <!-- Uprostřed: showcase (video) vystředěný -->
       <div class="hero-showcase">
         <h3>HOODWINK</h3>
         <br>
@@ -79,12 +70,9 @@
         </video>
       </div>
 
-      <!-- Vpravo: schopnosti ve sloupci s tooltipem -->
       <div class="hero-abilities-extended">
         <h3>ABILITIES</h3>
         <div class="abilities-column">
-
-          <!-- Jedna schopnost (ikona s tooltipem, název vedle) -->
           <div class="ability-item">
             <div class="icon-wrapper tooltip">
               <img src="Images/LegionCommander/innate_icon.png" alt="Innate Ability">
@@ -147,11 +135,10 @@
             <span>Sharpshooter</span>
           </div>
 
-        </div> <!-- .abilities-column -->
-      </div> <!-- .hero-abilities-extended -->
+        </div>
+      </div>
     </section>
 
-    <!-- Druhý řádek: Atributy, Role, Statistiky -->
     <section class="hero-info-row">
       <!-- Atributy -->
       <div class="hero-attributes">
@@ -256,7 +243,7 @@
       </div>
     </section>
 
-    <!-- Třetí řádek: Facety -->
+    <!-- Facety -->
     <section class="hero-facets-extended fade-up" id="facets">
       <h3>FACET DETAILS</h3>
       <div class="facet-box">
@@ -298,15 +285,13 @@
       </div>
     </section>
 
-    <!-- Hlášky hrdiny -->
+    <!-- Hlášky -->
     <section class="hero-voice-lines" id="voiceLines">
       <h3>LEGION COMMANDER VOICELINES</h3>
 
-      <!-- Jedna hláška (Legion Commander) -->
       <div class="voice-line" data-audio="Voices/Hoodwink/StubbiesDidWe.mpeg">
         <img src="Images/Hoodwink/Hoodwink_minimap_icon.webp" alt="Hero Head" class="hero-head-icon">
         <button class="voice-button">
-          <!-- Ikonky pro play/pause -->
           <span class="play-icon">&#9658;</span>
           <span class="pause-icon" style="display:none;">&#10073;&#10073;</span>
         </button>
@@ -322,8 +307,6 @@
         <span class="voice-text">No worries really only applies to me. That bunch should have heaps of worry.</span>
       </div>
     </section>
-
-
   </main>
 
   <footer>
