--- a/Wisp.html
+++ b/Wisp.html
@@ -21,7 +21,7 @@
           <li><a href="patch_7.38.html">Patch 7.38</a></li>
         </ul>
       </div>
-      <!-- HOME (odkaz rovnou) -->
+      <!-- HOME -->
       <div class="home-link">
         <a href="index.html">HOME</a>
       </div>
@@ -43,17 +43,9 @@
     </div>
   </header>
 
-  <!-- Toggle pro light/dark v pravém rohu -->
-  <div class="theme-toggle-wrapper">
-    <label for="themeSwitch">Dark/Light:</label>
-    <input type="checkbox" id="themeSwitch">
-  </div>
-
   <main class="hero-layout">
 
-    <!-- Horní řádek: vlevo popis, uprostřed video, vpravo schopnosti -->
     <section class="hero-top">
-      <!-- Vlevo: popis -->
       <div class="hero-description">
         <div class="attr-name">
           <p>UNIVERSAL <img src="Images/Atributes/hero_universal.png" alt="hero_universal"></p>
@@ -70,7 +62,6 @@
         <br>
       </div>
 
-      <!-- Uprostřed: showcase (video) vystředěný -->
       <div class="hero-showcase">
         <h3>IO</h3>
         <br>
@@ -79,12 +70,10 @@
         </video>
       </div>
 
-      <!-- Vpravo: schopnosti ve sloupci s tooltipem -->
       <div class="hero-abilities-extended">
         <h3>ABILITIES</h3>
         <div class="abilities-column">
 
-          <!-- Jedna schopnost (ikona s tooltipem, název vedle) -->
           <div class="ability-item">
             <div class="icon-wrapper tooltip">
               <img src="Images/LegionCommander/innate_icon.png" alt="Innate Ability">
@@ -147,12 +136,10 @@
             </div>
             <span>Relocate</span>
           </div>
-
-        </div> <!-- .abilities-column -->
-      </div> <!-- .hero-abilities-extended -->
+        </div> 
+      </div> 
     </section>
 
-    <!-- Druhý řádek: Atributy, Role, Statistiky -->
     <section class="hero-info-row">
       <!-- Atributy -->
       <div class="hero-attributes">
@@ -257,7 +244,7 @@
       </div>
     </section>
 
-    <!-- Třetí řádek: Facety -->
+    <!-- Facety -->
     <section class="hero-facets-extended fade-up" id="facets">
       <h3>FACET DETAILS</h3>
       <div class="facet-box">
@@ -300,22 +287,18 @@
       </div>
     </section>
 
-    <!-- Hlášky hrdiny -->
+    <!-- Hlášky -->
     <section class="hero-voice-lines" id="voiceLines">
       <h3>IO VOICELINES</h3>
-
-      <!-- Jedna hláška (Legion Commander) -->
       <div class="voice-line" data-audio="Voices/Wisp/ioLaugh.mpeg">
         <img src="Images/Wisp/Io_minimap_icon.webp" alt="Hero Head" class="hero-head-icon">
         <button class="voice-button">
-          <!-- Ikonky pro play/pause -->
           <span class="play-icon">&#9658;</span>
           <span class="pause-icon" style="display:none;">&#10073;&#10073;</span>
         </button>
         <span class="voice-text">IO Laughs</span>
       </div>
 
-      <!-- Další hláška -->
       <div class="voice-line" data-audio="/Voices/Wisp/ioAlly.mpeg">
         <img src="Images/Wisp/Io_minimap_icon.webp" alt="Hero Head" class="hero-head-icon">
         <button class="voice-button">
@@ -325,8 +308,6 @@
         <span class="voice-text">IO meets friendly unit</span>
       </div>
     </section>
-
-
   </main>
 
   <footer>
