--- a/Hoodwink.html
+++ b/Hoodwink.html
@@ -314,7 +314,7 @@
     <p class="validator-links">
       <a href="https://validator.w3.org/nu/" target="_blank">Validate HTML</a> |
       <a href="https://jigsaw.w3.org/css-validator/" target="_blank">Validate CSS</a> |
-      <a href="https://achecks.org/achecker" target="_blank">WCAG Validation</a>
+      <a href="https://achecks.org/achecker#wcag21aa-desktop,https://pikerest.github.io/TWS/Hoodwink.html" target="_blank">WCAG Validation</a>
     </p>
   </footer>
 
