--- a/patch_7.38.html
+++ b/patch_7.38.html
@@ -19,7 +19,7 @@
           <li><a href="patch_7.38.html">Patch 7.38</a></li>
         </ul>
       </div>
-      <!-- HOME (odkaz rovnou) -->
+      <!-- HOME -->
       <div class="home-link">
         <a href="index.html">HOME</a>
       </div>
@@ -55,7 +55,6 @@
       <h2>GENERAL UPDATES</h2>
 
       <ol>
-        <!-- 1) Major Mechanics -->
         <!-- 1) Major Mechanics -->
         <li>Major Mechanics
           <ul>
@@ -226,7 +225,6 @@
         <img src="Images/UpdatedItems/Abyssal_Blade_icon.webp" alt="Abyssal Blade" class="item-icon">
         <div class="item-details">
           <h3>Abyssal Blade</h3>
-          <!-- <p class="item-status">(ITEM REWORKED)</p> případně, pokud chceš -->
           <ul>
             <li>Recipe changed</li>
             <li>Now requires Skull Basher (2875), Sange (2100) and a 175 gold recipe. Total cost unchanged at 6250</li>
@@ -253,12 +251,12 @@
         </div>
       </div>
 
-      <!-- Heaven's Halberd (ITEM REMOVED) -->
+      <!-- Heaven's Halberd -->
       <div class="item-change">
         <img src="Images/UpdatedItems/Heaven_Halberd_icon.webp" alt="Heaven's Halberd" class="item-icon">
         <div class="item-details">
           <h3>Heaven's Halberd</h3>
-          <p class="item-status" style="color:#ffcc00;">(ITEM REMOVED)</p>
+          <p class="item-status" style="color:#ffcc00;">(ITEM REWORKED)</p>
           <ul>
             <li>Requires Vanguard (1700), Crown (450), Ring of Regen (175) and a 275 gold recipe. Total cost: 2600</li>
             <li>Provides +7.5 Health, +6 Health Regen and +5 All Attributes</li>
@@ -269,7 +267,7 @@
         </div>
       </div>
 
-      <!-- Gleipnir (ITEM REWORKED) -->
+      <!-- Gleipnir -->
       <div class="item-change">
         <img src="Images/UpdatedItems/Gleipnir_icon.webp" alt="Gleipnir" class="item-icon">
         <div class="item-details">
@@ -306,7 +304,7 @@
         </div>
       </div>
 
-      <!-- Khanda (ITEM REWORKED) -->
+      <!-- Khanda -->
       <div class="item-change">
         <img src="Images/UpdatedItems/Khanda_icon.webp" alt="Khanda" class="item-icon">
         <div class="item-details">
