--- a/Wisp.html
+++ b/Wisp.html
@@ -144,7 +144,7 @@
       <!-- Atributy -->
       <div class="hero-attributes">
         <div class="portrait-section">
-          <img src="images/Wisp/Io_icon.webp" alt="Hero Portrait" class="hero-portrait">
+          <img src="Images/Wisp/Io_icon.webp" alt="Hero Portrait" class="hero-portrait">
           <div class="hp-mana">
             <div class="stat-line-hp">
               <span>494</span>
