--- a/Wisp.html
+++ b/Wisp.html
@@ -299,7 +299,7 @@
         <span class="voice-text">IO Laughs</span>
       </div>
 
-      <div class="voice-line" data-audio="/Voices/Wisp/ioAlly.mpeg">
+      <div class="voice-line" data-audio="Voices/Wisp/ioAlly.mpeg">
         <img src="Images/Wisp/Io_minimap_icon.webp" alt="Hero Head" class="hero-head-icon">
         <button class="voice-button">
           <span class="play-icon">&#9658;</span>
