--- a/Wisp.html
+++ b/Wisp.html
@@ -144,7 +144,7 @@
       <!-- Atributy -->
       <div class="hero-attributes">
         <div class="portrait-section">
-          <img src="images/Wisp/Io_icon.webp" alt="Hero Portrait" class="hero-portrait">
+          <img src="Images/Wisp/Io_icon.webp" alt="Hero Portrait" class="hero-portrait">
           <div class="hp-mana">
             <div class="stat-line-hp">
               <span>494</span>
@@ -299,7 +299,7 @@
         <span class="voice-text">IO Laughs</span>
       </div>
 
-      <div class="voice-line" data-audio="/Voices/Wisp/ioAlly.mpeg">
+      <div class="voice-line" data-audio="Voices/Wisp/ioAlly.mpeg">
         <img src="Images/Wisp/Io_minimap_icon.webp" alt="Hero Head" class="hero-head-icon">
         <button class="voice-button">
           <span class="play-icon">&#9658;</span>
