--- a/Hoodwink.html
+++ b/Hoodwink.html
@@ -287,7 +287,7 @@
 
     <!-- Hlášky -->
     <section class="hero-voice-lines" id="voiceLines">
-      <h3>LEGION COMMANDER VOICELINES</h3>
+      <h3>HOODWINK VOICELINES</h3>
 
       <div class="voice-line" data-audio="Voices/Hoodwink/StubbiesDidWe.mpeg">
         <img src="Images/Hoodwink/Hoodwink_minimap_icon.webp" alt="Hero Head" class="hero-head-icon">
