--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <li><a href="patch_7.38.html">Patch 7.38</a></li>
         </ul>
       </div>
-      <!-- HOME (odkaz rovnou) -->
+      <!-- HOME -->
       <div class="home-link">
         <a href="index.html">HOME</a>
       </div>
@@ -68,11 +68,9 @@
           <li><img src="Images/Background/519205575.jpg" alt="Background519205575"></li>
         </ul>
     
-        <!-- Doplň aria-label k navigačním tlačítkům -->
         <button type="button" class="slider-nav" aria-label="Předchozí slide"></button>
         <button type="button" class="slider-nav slider-nav-next" aria-label="Další slide"></button>
     
-        <!-- Stejně tak i k indikátorům, aby byly čtečce srozumitelné -->
         <div class="slider-indicators">
           <button class="active" aria-label="Slide 1"></button>
           <button aria-label="Slide 2"></button>
